# aiprtest

./: .gitignore  README.md  pyproject.toml
docs/: operations.md  testing.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  main.jsx  styles.css
migrations/: README.md
src/app/: __init__.py  audit.py  auth.py  db.py  health.py  main.py  metadata.py  payments.py  settings.py  users.py
tests/: test_auth.py  test_config.py  test_health.py  test_metadata.py  test_payments.py  test_users.py
