[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review-sandbox"
version = "0.1.0"
description = "Small FastAPI sandbox for testing AI PR review tools."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.28,<1.0",
    "pytest>=8,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
